--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "sentiment-analysis-modification",
   "version": "1.0.0",
-  "description": "Modified version of NPM Sentiment",
-  "main": "index.js",
+  "description": "Adds functions building on npm Sentimental",
+  "main": "js/comment.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha spec"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
