--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "Sentimental": "^1.0.1",
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
   }
